--- a/Lesson7_task12_js-Переверните массив/index.html
+++ b/Lesson7_task12_js-Переверните массив/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,6 @@
   </head>
   <body>
     Hello!
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
